# self-healing-agent

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  edges.py  graph.py  state.py
agent/nodes/: __init__.py  context_builder.py  patch_generator.py  postmortem.py  qdrant_store.py  self_reflector.py
eval/: __init__.py  benchmark_results.json  metrics.py  swebench_runner.py
github_integration/: __init__.py  pr_opener.py
results/: .gitkeep
sandbox/: Dockerfile  __init__.py  executor.py  runner.py
scripts/: run_single_task.py  run_swebench.py
tests/: __init__.py  test_context_builder.py  test_executor.py  test_metrics.py  test_patch_generator.py  test_self_reflector.py
tests/fixtures/: sample_patch.py
tests/fixtures/sample_repo/: main.py  test_main.py
